--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name">
     <activity android:name=".HelloJni"
-              android:label="@string/app_name">
+              android:label="@string/app_name"
+              android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
