--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:fullBackupContent="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name">
-    <activity android:name=".HelloJni"
+    <activity android:name=".MainActivity"
               android:label="@string/app_name"
               android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
       <intent-filter>
@@ -23,6 +23,8 @@
     </activity>
 
     <activity android:name=".VideoViewActivity"
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+    <activity android:name=".HelloJni"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
   </application>
 </manifest>
