--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
   <application
       android:allowBackup="false"
       android:fullBackupContent="false"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@drawable/logo"
       android:label="@string/app_name">
     <activity android:name=".MainActivity"
               android:label="@string/app_name"
