--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.model.application'
 model {
     android {
         compileSdkVersion = 23
-        buildToolsVersion = '23.0.2'
+        buildToolsVersion = '23.0.3'
 
         defaultConfig {
             applicationId = 'com.example.hellojni'
-            minSdkVersion.apiLevel = 4
+            minSdkVersion.apiLevel = 17
             targetSdkVersion.apiLevel = 23
         }
         /*
@@ -51,4 +51,9 @@ model {
             create("all")
         }
     }
+}
+dependencies {
+    compile 'com.android.support:percent:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
 }
