--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,11 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
   <application
-      android:allowBackup="false"
-      android:fullBackupContent="false"
+      android:allowBackup="true"
       android:icon="@drawable/logo"
       android:label="@string/app_name">
     <activity android:name=".MainActivity"
-              android:label="@string/app_name"
-              android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+              android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -23,14 +21,14 @@
     </activity>
 
     <activity android:name=".SelectAlbumDesignActivity"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" />
     <activity android:name=".CreateAlbumActivity"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"/>
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" />
     <activity android:name=".HelloJni"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
         android:screenOrientation="landscape"/>
     <activity android:name=".MovieActivity"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"
         android:screenOrientation="landscape"/>
   </application>
 </manifest>
